--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,16 @@
   margin: 0;
   padding: 0;
 }
+body {
+  background: #f5f6fa;
+}
 .app__header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
+}
+.app__stats{
+  display: flex;
+  justify-content: space-between;
 }
