--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,26 @@
 body {
   background: #f5f6fa;
 }
+.app {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 20px;
+}
+.app__left {
+  flex: 0.9;
+}
 .app__header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
 }
-.app__stats{
+.app__stats {
   display: flex;
   justify-content: space-between;
+}
+@media (max-width: 990px) {
+  .app {
+    flex-direction: column;
+  }
 }
